--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,28 +1,57 @@
-# This config is equivalent to both the '.circleci/extended/orb-free.yml' and the base '.circleci/config.yml'
-version: 2.1
+# Javascript Node CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-javascript/ for more details
+#
+version: 2
 
-# Orbs are reusable packages of CircleCI configuration that you may share across projects, enabling you to create encapsulated, parameterized commands, jobs, and executors that can be used across multiple projects.
-# See: https://circleci.com/docs/2.0/orb-intro/
-orbs:
-  node: circleci/node@4.7
+jobs:
+  build:
+#    docker:
+      # specify the version you desire here
+#      - image: circleci/node:12.2.0
+#      - image: circleci/openjdk:8-jdk-stretch
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/mongo:3.4.4
 
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
-workflows:
-  smoke-tests: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
-    jobs:
-        build-and-test:
-          working_directory: F:\webdriverio-framework
-          # This is the node version to use for the `cimg/node` tag
-          # Relevant tags can be found on the CircleCI Developer Hub
-          # https://circleci.com/developer/images/image/cimg/node
-          version: '18.9.1'
-          # If you are using yarn, change the line below from "npm" to "yarn"
-          
-          steps :
-            - node/install-packages:
-                pkg-manager: npm
-            - run:
-              name : Run tests
-              command : npm run smoke-tests
+    working_directory: F:\webdriverio-framework
+
+      # environment:
+    # JAVA_HOME:  /usr/lib/jvm/java-8-openjdk-amd64
+
+    steps:
+      - checkout
+
+      # Download and cache dependencies
+     # - restore_cache:
+     #     keys:
+     #       - v1-dependencies-{{ checksum "package.json" }}
+            # fallback to using the latest cache if no exact match is found
+     #       - v1-dependencies-
+
+      - run:
+          name: "Install dependencies"
+          command: |
+            npm install
+
+    #  - save_cache:
+    #      paths:
+    #        - node_modules
+    #      key: v1-dependencies-{{ checksum "package.json" }}
+
+      - run:
+          name: "Run tests"
+          command: |
+            npm run test.sauce
+
+#      - run:
+#          name: Generate Allure Report
+#          command: npm run report.ci
+#          when: always
+
+ #     - store_test_results:
+ #         path: ./report/junit
+
+#      - store_artifacts:
+#          path: allure-report/
