--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
       - run:
           name: "Run tests"
           command: |
-            npm run test.sauce
+            npm run smoke-tests
 
 #      - run:
 #          name: Generate Allure Report
