--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@
 # version: 2
 
 jobs:
-  build:
+#  build:
 #    docker:
       # specify the version you desire here
 #      - image: circleci/node:12.2.0
