--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,10 @@
 # version: 2
 
 jobs:
-#  build:
-#    docker:
+  build:
+    docker:
       # specify the version you desire here
-#      - image: circleci/node:12.2.0
+      - image: circleci/node:12.2.0
 #      - image: circleci/openjdk:8-jdk-stretch
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
