--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@
 #
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 #
-# version: 2
+ version: 2
 
 jobs:
   build:
@@ -22,6 +22,7 @@ jobs:
 
     steps:
       - checkout
+      - run: node --version
 
       # Download and cache dependencies
      # - restore_cache:
