--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,13 +2,13 @@
 #
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 #
-# version: 2
+version: 2.1
 
 jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: cimg/node:16.17.1
+      - image: circleci/node:12.14.1-browsers
 #      - image: circleci/openjdk:8-jdk-stretch
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
