--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,21 +25,21 @@ jobs:
       
 
       # Download and cache dependencies
-     # - restore_cache:
-     #     keys:
-     #       - v1-dependencies-{{ checksum "package.json" }}
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
             # fallback to using the latest cache if no exact match is found
-     #       - v1-dependencies-
+            - v1-dependencies-
 
       - run:
           name: "Install dependencies"
           command: |
             npm install
 
-    #  - save_cache:
-    #      paths:
-    #        - node_modules
-    #      key: v1-dependencies-{{ checksum "package.json" }}
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
 
       - run:
           name: "Run tests"
