--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
       - run:
           name: "Run tests"
           command: |
-            npm run wdio.conf.js
+            npx wdio run wdio.conf.js
 
 #      - run:
 #          name: Generate Allure Report
