--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
       - run:
           name: "Run tests"
           command: |
-            npm run smoke-tests
+            npm run smoke-tests:headless -- --chrome
 
 #      - run:
 #          name: Generate Allure Report
