--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/node:12.14.1-browsers
+      - image: circleci/node:dubnium-buster-browsers-legacy
 #      - image: circleci/openjdk:8-jdk-stretch
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -44,7 +44,7 @@ jobs:
       - run:
           name: "Run tests"
           command: |
-            npx wdio
+            npm run wdio
 
 #      - run:
 #          name: Generate Allure Report
