--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/node:<version>-browsers
+      - image: circleci/node:16.13.0
 #      - image: circleci/openjdk:8-jdk-stretch
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
